# MAS-Additions

./: .gitignore  .gitmodules  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml
Additions_Core/compiled/game/: screens.rpyc  zz_additions.rpyc
Additions_Core/game/: screens.rpy  screens.rpyc  zz_additions.rpyc
Additions_Core/game/Additions/: screens_override.rpy  screens_override.rpyc  zz_additions.rpy  zz_additions.rpyc
Additions_Core/game/python-packages/: ConfigParser.py
Additions_FaceDetectionRecognition/MASM/scripts/: _NSE_live.py  example.lua  example.py  face_detection.py
Additions_FaceDetectionRecognition/MASM/scripts/facer/: facer.py
Additions_FaceDetectionRecognition/MASM/scripts/numpy/: version.py
Additions_FaceDetectionRecognition/compiled/game/: zz_additions_face_detection.rpyc
Additions_FaceDetectionRecognition/game/: zz_additions_face_detection.rpy  zz_additions_face_detection.rpyc
Additions_FaceDetectionRecognition/game/Additions/: zz_additions_face_detection.rpy  zz_additions_face_detection.rpyc
Additions_FaceDetectionRecognition/source/game/: zz_additions_face_detection.rpy
Additions_MASM/MASM/: Binaries_Here.txt  serverSim.py
Additions_MASM/MASM/python38/DLLs/: _elementtree.pyd  _hashlib.pyd  _multiprocessing.pyd  _sqlite3.pyd  _ssl.pyd  pyexpat.pyd  python_tools.cat  winsound.pyd
Additions_MASM/MASM/scripts/: select.pyd  socketer.py
Additions_MASM/compiled/game/: zz_additions_MASM_communicator.rpyc
Additions_MASM/game/: zz_additions_MASM_communicator.rpy  zz_additions_MASM_communicator.rpyc
Additions_MASM/game/Additions/: zz_additions_MASM_communicator.rpy  zz_additions_MASM_communicator.rpyc
Additions_MASM/game/Additions/MASM/: MASM Guide.txt  Readme_Safety.txt  serverSim.py
Additions_MASM/game/Submods/: DatHorse_MASM.rpy  DatHorse_MASM.rpyc
Additions_MASM/game/Submods/MASM/: Binaries_Here.txt  Readme_Safety.txt
Additions_MASM/source/game/: zz_additions_MASM_communicator.rpy
Additions_MIDIsupport/MASM/scripts/: midi_input.py
Additions_MIDIsupport/game/: zz_pianokeys.rpy  zz_pianokeys.rpyc
Additions_MIDIsupport/game/Additions/: zz_pianokeys_overrides.rpy  zz_pianokeys_overrides.rpyc
MASM-Source/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json  xmake.lua
MASM-Source/Custom-Triplets/: x64-linux.cmake  x64-windows-bin.cmake  x64-windows.cmake  x86-windows-bin.cmake  x86-windows.cmake
MASM-Source/Source/: main.cpp  python_manager.cpp  python_manager.h  pythonscript.h  utilities.h
MASM_Binaries/Linux_AMD64/: MASM  libffi.so.7
MASM_Binaries/Windows_AMD64/: quad.shader
Submods/MAS Additions/: FDAR.rpy  FDAR_Topics.rpy  FaceDetectionAndRecognition.rpy  FaceDetectionAndRecognition_Topics.rpy  MIDISupport.rpy  MonikaAfterStoryModule.rpy
Submods/MAS Additions/MASM/: readme.txt  serverSim.py
game/: additions.rpy  screens.rpy  zz_additions_MASM_communicator.rpy
game/super_experimental_addition/: MASM Guide.txt  Readme_Safety.txt
game/super_experimental_addition/scripts/: example.lua  example.py
(+43 files in other folders)
